# IDL_project

./: .gitignore  pyproject.toml  test_checkpoint_inference.py  test_inference.py  test_streamlit_models.py  test_untrained.py
dataset/: README.md
models/: README.md
streamlit/: README.md  app.py
streamlit/components/: __init__.py  viz.py
streamlit/config/: __init__.py  app_config.py
streamlit/models/: __init__.py
streamlit/pages/: __init__.py  home.py
streamlit/scripts/: __init__.py  generate_examples.py  setup.py
streamlit/utils/: __init__.py
training/: README.md  __init__.py  inference.py  train.py  train_esrcnn.ipynb  train_esrcnn.py  train_fisr.py  train_srcnn.py  train_srcnn_full_resolution.py
training/core/: __init__.py  config.py  config_esrcnn.py  config_fisr.py  config_sr.py  config_srcnn.py  trainer.py  trainer_fisr.py  trainer_sr.py  trainer_srcnn.py
training/inference/: __init__.py  inference.py  srcnn_inference.py
training/managers/: __init__.py  checkpoint_manager.py  model_exporter.py
training/models/: fsrcnn.py
training/steps/: __init__.py  eval_step.py  eval_step_sr.py  train_step.py  train_step_sr.py
training/train_utils/: ESRCNN_GUIDE.md  __init__.py  create_lr_images.py  docs.md  esrcnn.py  face_sr_dataset.py  fisr.py  losses_sr.py  modules.py  physics_informed_mae.py  srcnn.py  test_cuda.py  test_esrcnn.py  test_srcnn.py  (+1 more)
utils/: README.md  __init__.py  dataset_preview.py  export_onnx.ipynb  generate_lr.ipynb  image_utils.py  numpy_dataset.py  test_fsrcnn.ipynb  test_fsrcnn_ground_truth.ipynb  test_srcnn_inference.py  test_untrained.py  view_fisr_inference.py  visualize.py
(+57 files in other folders)
