[project]
name = "idl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scipy>=1.11.0",
    "scikit-image>=0.22.0",
    "matplotlib>=3.10.8",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
